fix vertical shift and next button padding

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -132,7 +132,7 @@ h4#upload-complete+p+p a {
 
 h4#upload-complete+p+p a.button {
   background-color: #3B63FB;
-  padding: 10px 15px;
+  padding: 10px 32px;
 }
 
 h4#upload-complete+p+p a.button:hover {
